# seal-wallet

./: .travis.yml  README.md  default.nix  seal-wallet.cabal  seal.yaml  stack-local.yaml  stack.yaml
app/generate-swagger/: Main.hs
app/server/: Main.hs
dist-newstyle/cache/: compiler  config
nix/: .stack-pkgs.nix  stack-shell.nix
src/Seal/Wallet/: API.hs  Action.hs  Client.hs  Core.hs  Kernel.hs  NodeProxy.hs  Server.hs  TypeLits.hs  Util.hs  WalletLayer.hs
src/Seal/Wallet/API/: Indices.hs  Internal.hs  Request.hs  Response.hs  Types.hs  V1.hs
src/Seal/Wallet/API/Internal/: Handlers.hs
src/Seal/Wallet/API/Node/: Client.hs
src/Seal/Wallet/API/Request/: Filter.hs  Pagination.hs  Parameters.hs  Sort.hs
src/Seal/Wallet/API/Response/: JSend.hs
src/Seal/Wallet/API/Response/Filter/: IxSet.hs
src/Seal/Wallet/API/Response/Sort/: IxSet.hs
src/Seal/Wallet/API/Types/: UnitOfMeasure.hs
src/Seal/Wallet/API/Util/: Example.hs  Pagination.hs  Servant.hs
src/Seal/Wallet/API/V1/: Accounts.hs  Addresses.hs  Errors.hs  Generic.hs  Handlers.hs  Headers.hs  Info.hs  Parameters.hs  ReifyWalletError.hs  Settings.hs  Swagger.hs  Transactions.hs  Types.hs  Wallets.hs
src/Seal/Wallet/API/V1/Handlers/: Accounts.hs  Addresses.hs  Settings.hs  Transactions.hs  Wallets.hs
src/Seal/Wallet/API/V1/Swagger/: Example.hs
src/Seal/Wallet/Chain/: Arbitrary.hs
src/Seal/Wallet/Client/: Http.hs
src/Seal/Wallet/Kernel/: Accounts.hs  Actions.hs  AddressPool.hs  AddressPoolGap.hs  Addresses.hs  BListener.hs  CoinSelection.hs  Diffusion.hs  Ed25519Bip44.hs  Internal.hs  Invariants.hs  Keystore.hs  Migration.hs  Mode.hs  NodeStateAdaptor.hs  Pending.hs  Prefiltering.hs  Read.hs  Restore.hs  Submission.hs  Transactions.hs  Types.hs  Wallets.hs
src/Seal/Wallet/Kernel/CoinSelection/: FromGeneric.hs  Generic.hs
src/Seal/Wallet/Kernel/CoinSelection/Generic/: Fees.hs  Grouped.hs  LargestFirst.hs  Random.hs
src/Seal/Wallet/Kernel/DB/: AcidState.hs  BlockContext.hs  BlockMeta.hs  Compression.hs  HdRootId.hs  HdWallet.hs  InDb.hs  Read.hs  Resolved.hs  Spec.hs  Sqlite.hs  TxMeta.hs  Updates.hs
src/Seal/Wallet/Kernel/DB/HdWallet/: Create.hs  Delete.hs  Derivation.hs  Read.hs  Update.hs
src/Seal/Wallet/Kernel/DB/Spec/: Pending.hs  Read.hs  Update.hs
src/Seal/Wallet/Kernel/DB/TxMeta/: Types.hs
src/Seal/Wallet/Kernel/DB/Util/: AcidState.hs  IxSet.hs  Zoomable.hs
src/Seal/Wallet/Kernel/Submission/: Worker.hs
src/Seal/Wallet/Kernel/Util/: Core.hs  NonEmptyMap.hs  Strict.hs  StrictList.hs  StrictNonEmpty.hs  StrictStateT.hs
src/Seal/Wallet/Node/: Client.hs
src/Seal/Wallet/Server/: CLI.hs  Middlewares.hs  Plugins.hs
src/Seal/Wallet/Server/Plugins/: AcidState.hs
src/Seal/Wallet/Types/: UtxoStatistics.hs
src/Seal/Wallet/WalletLayer/: ExecutionTimeLimit.hs  Kernel.hs
src/Seal/Wallet/WalletLayer/Kernel/: Accounts.hs  Active.hs  Addresses.hs  Conv.hs  Internal.hs  Transactions.hs  Wallets.hs
test/integration/: Main.hs
test/integration/Test/Integration/: Documentation.hs
test/integration/Test/Integration/Framework/: Cluster.hs  DSL.hs  Request.hs
test/integration/Test/Integration/Scenario/: Accounts.hs  Addresses.hs  EosWallets.hs  Node.hs  Transactions.hs  Wallets.hs
test/nightly/: TxMetaStorage.hs
test/unit/: Arbitrary.hs  Main.hs
test/unit/API/: MarshallingSpec.hs  RequestSpec.hs  SwaggerSpec.hs
test/unit/Golden/: APILayout.hs  APIV1Types.hs  Ed25519Addresses.hs  WalletError.hs
test/unit/InputSelection/: Evaluation.hs  FromGeneric.hs  SortedUtxo.hs  TxStats.hs
test/unit/InputSelection/Evaluation/: Events.hs  Generic.hs
test/unit/Test/Infrastructure/: Generator.hs  Genesis.hs
test/unit/Test/Spec/: Accounts.hs  AddressPool.hs  AddressPoolGap.hs  Addresses.hs  BlockMetaScenarios.hs  CoinSelection.hs  DeltaCompression.hs  Ed25519Bip44.hs  Fixture.hs  GetTransactions.hs  Kernel.hs  Keystore.hs  Models.hs  NewPayment.hs  Submission.hs  Translation.hs  TxMetaScenarios.hs  TxMetaStorage.hs  WalletWorker.hs  Wallets.hs
test/unit/Test/Spec/CoinSelection/: Generators.hs
test/unit/UTxO/ToCardano/: Interpreter.hs
test/unit/Util/: GenHash.hs  Prefiltering.hs
test/unit/Wallet/: Abstract.hs  Inductive.hs
test/unit/Wallet/Inductive/: Cardano.hs  ExtWalletEvent.hs  Generator.hs  History.hs  Interpreter.hs  Validation.hs
